--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     environment:
       - SYMBOLS=${SYMBOLS:-BTC/USDT}
       - BACKFILL_DAYS=${BACKFILL_DAYS:-7}
-      - BACKFILL_EVENTS_TOPIC=${BACKFILL_EVENTS_TOPIC:-}
+
     command: python historical_producer.py
     depends_on:
       - kafka
@@ -53,19 +53,46 @@ services:
     environment:
       - SYMBOLS=${SYMBOLS:-BTC/USDT}
       - REALTIME_DELAY_SECONDS=${REALTIME_DELAY_SECONDS:-1}
-      - TOPIC_NAME=binance-ohlcv
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - TOPIC_NAME=${OHLCV_TOPIC}
+      - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BROKER}
     command: python realtime_producer.py
     depends_on:
       - kafka
     restart: unless-stopped
 
+  ws-realtime-producer:
+    build: ./data-processors/producer
+    env_file: .env
+    environment:
+      - SYMBOLS=${SYMBOLS:-BTCUSDT,ETHUSDT}
+      - KAFKA_BROKER=${KAFKA_BROKER}
+      - MARKET_STREAM_TOPIC=${MARKET_STREAM_TOPIC}
+    command: python ws_realtime_producer.py
+    depends_on:
+      - kafka
+    restart: unless-stopped
+
+  signals-consumer:
+    build: ./data-processors/signals-consumer
+    env_file: .env
+    environment:
+      - KAFKA_BROKER=${KAFKA_BROKER}
+      - OHLCV_TOPIC=${OHLCV_TOPIC}
+      - MARKET_STREAM_TOPIC=${MARKET_STREAM_TOPIC}
+      - SIGNALS_TOPIC=${TRADING_SIGNALS_TOPIC}
+
+      - INDICATOR_WINDOW=${INDICATOR_WINDOW:-200}
+    command: python consumer.py
+    depends_on:
+      - kafka
+    restart: unless-stopped
   db-consumer:
     build: ./data-processors/db-consumer
     env_file: .env
     environment:
-      - TOPIC_NAME=binance-ohlcv
-      - KAFKA_BROKER=kafka:9092
+      - TOPIC_NAME=${OHLCV_TOPIC}
+      - KAFKA_BROKER=${KAFKA_BROKER}
     depends_on:
       - kafka
     restart: unless-stopped
+
