--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,33 @@ services:
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
       KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
 
+  grafana:
+    image: grafana/grafana:latest
+    env_file: .env
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource
+    volumes:
+      - grafana-storage:/var/lib/grafana
+      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning
+      - ./monitoring/grafana/dashboards:/var/lib/grafana/dashboards
+    restart: unless-stopped
+
+  metrics-postgres:
+    image: postgres:15
+    env_file: .env
+    environment:
+      POSTGRES_DB: ${GRAFANA_POSTGRES_DB:-grafana}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - ./monitoring/sql/init.sql:/docker-entrypoint-initdb.d/20-init.sql
+    restart: unless-stopped
+
+  # Using host PostgreSQL (host.docker.internal). No internal postgres container needed for metrics.
+
   historical-producer:
     build: ./data-processors/producer
     env_file: .env
@@ -96,3 +123,17 @@ services:
       - kafka
     restart: unless-stopped
 
+  metrics-collector:
+    build: ./monitoring/metrics-collector
+    env_file: .env
+    environment:
+      POSTGRES_HOST: metrics-postgres
+      GRAFANA_POSTGRES_DB: ${GRAFANA_POSTGRES_DB:-grafana}
+    depends_on:
+      - kafka
+      - metrics-postgres
+      # uses host.docker.internal postgres
+    restart: unless-stopped
+
+volumes:
+  grafana-storage:
