--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
+    profiles:
+      - live
 
   kafka:
     image: confluentinc/cp-kafka:7.3.0
@@ -23,6 +25,8 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+    profiles:
+      - live
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
@@ -34,6 +38,8 @@ services:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
       KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
+    profiles:
+      - live
 
   grafana:
     image: grafana/grafana:latest
@@ -47,7 +53,10 @@ services:
       - ./monitoring/grafana/provisioning:/etc/grafana/provisioning
       - ./monitoring/grafana/dashboards:/var/lib/grafana/dashboards
     restart: unless-stopped
+    profiles:
+      - live
 
+  # Temporary PostgreSQL for grafana and binance (refreshed on restart)
   postgres:
     image: postgres:15
     env_file: .env
@@ -66,6 +75,33 @@ services:
       retries: 5
       start_period: 30s
     restart: unless-stopped
+    profiles:
+      - live
+
+  # Persistent PostgreSQL for backtesting only (manual start)
+  postgres-backtesting:
+    image: postgres:15
+    env_file: .env
+    environment:
+      POSTGRES_DB: backtesting
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "5433:5432"
+    volumes:
+      - ./backtesting/database/init.sql:/docker-entrypoint-initdb.d/01-backtesting.sql
+      - postgres_backtesting_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d backtesting"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    restart: unless-stopped
+    profiles:
+      - backtesting
+      - backtesting-job
+      - live
 
   # All services now use containerized PostgreSQL
 
@@ -86,6 +122,8 @@ services:
       kafka:
         condition: service_started
     restart: "no"
+    profiles:
+      - live
 
   realtime-producer:
     build: ./data-processors/producer
@@ -106,6 +144,8 @@ services:
       kafka:
         condition: service_started
     restart: unless-stopped
+    profiles:
+      - live
 
   ws-realtime-producer:
     build: ./data-processors/producer
@@ -118,6 +158,8 @@ services:
     depends_on:
       - kafka
     restart: unless-stopped
+    profiles:
+      - live
 
   signals-consumer:
     build: ./data-processors/signals-consumer
@@ -140,6 +182,8 @@ services:
       kafka:
         condition: service_started
     restart: unless-stopped
+    profiles:
+      - live
   db-consumer:
     build: ./data-processors/db-consumer
     env_file: .env
@@ -157,6 +201,8 @@ services:
       kafka:
         condition: service_started
     restart: unless-stopped
+    profiles:
+      - live
 
   metrics-collector:
     build: ./monitoring/metrics-collector
@@ -172,3 +218,44 @@ services:
         condition: service_started
       # uses containerized postgres
     restart: unless-stopped
+    profiles:
+      - live
+
+  backtesting-job:
+    build: ./backtesting
+    env_file: .env
+    environment:
+      - POSTGRES_HOST=postgres-backtesting
+      - POSTGRES_DB=backtesting
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - SYMBOLS=${SYMBOLS:-BTCUSDT,ETHUSDT,ADAUSDT}
+    depends_on:
+      postgres-backtesting:
+        condition: service_healthy
+    restart: "no"
+    profiles:
+      - backtesting-job
+
+  backtesting-dashboard:
+    build:
+      context: ./backtesting
+      dockerfile: Dockerfile.dashboard
+    env_file: .env
+    environment:
+      - POSTGRES_HOST=postgres-backtesting
+      - POSTGRES_DB=backtesting
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    ports:
+      - "8501:8501"
+    depends_on:
+      postgres-backtesting:
+        condition: service_healthy
+    restart: unless-stopped
+    profiles:
+      - backtesting
+      - live
+
+volumes:
+  postgres_backtesting_data:
